<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TasteIt</string>
    <string name="action_about">Acerca de</string>
    <string name="dialog_message">Creado por Edel Custodio - 2014</string>
    <string name="dialog_ok">Ok</string>
    <string name="list_item_left_button">Comentar</string>
    <string name="list_item_right_button">Compartir</string>
    <string name="title_activity_restaurantes_map">Mapa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    
    
    <string name="bienvenido">Bienvenido.</string>
    <string name="texto_intro">Estas apunto de encontrar cientos de restaurantes, de los cuales podras elegir los mejores valorados, y saber 
        que es lo mas sabroso que ofrece el lugar y muchas otras cosas mas.</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

</resources>
